kubernetes/consul-config.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
spec:
  serviceName: consul
  replicas: 3
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:latest
        ports:
        - containerPort: 8500
          name: http
        - containerPort: 8600
          name: dns
        volumeMounts:
        - name: config
          mountPath: /consul/config
        - name: data
          mountPath: /consul/data
      volumes:
      - name: config
        configMap:
          name: consul-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
