kubernetes/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-ui
  labels:
    app: consul
spec:
  ports:
  - port: 8500
    targetPort: 8500
    name: http
  selector:
    app: consul
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: consul-dns
  labels:
    app: consul
spec:
  ports:
  - port: 8600
    targetPort: 8600
    protocol: UDP
    name: dns
  selector:
    app: consul
  type: ClusterIP
