kubernetes/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
          name: http
        - containerPort: 14250
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  ports:
  - port: 16686
    targetPort: 16686
    name: http
  - port: 14250
    targetPort: 14250
    name: grpc
  selector:
    app: jaeger
  type: ClusterIP
